# spotics

./: Cargo.toml  LICENSE  README.md
src/: args.rs  lib.rs  lrc.rs  main.rs  spotify_lyrics.rs  token.rs  token_store.rs  web_api.rs  web_player.rs
src/web_api/: auth.rs  resource.rs  search.rs
src/web_player/: auth.rs  lyric.rs  resource.rs
