[package]
name = "spotics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive", "env"] }
env_logger = "0.11.6"
futures = "0.3.31"
id3 = "1.16.1"
log = "0.4.25"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
