[package]
name = "spotics"
version = "0.2.0"
edition = "2021"
authors = ["miyake13000"]
description = "CLI tool to fetch lyrics from Spotify and write to your music"
repository = "https://github.com/miyake13000/spotics"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "now"] }
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
env_logger = "0.11"
futures = "0.3"
id3 = "1.16"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["full"] }
totp-rs = "5.7"
